# md_dungeon_crawler_inventory

./: Cargo.toml
items/: shield.toml  sword.toml
src/: inventory.rs  item.rs  lib.rs
