[package]
name = "md_dungeon_crawler_inventory"
version = "0.1.0"
authors = ["Markus Dick <36760856+nukeurself@users.noreply.github.com>"]
edition = "2018"
description = "handles the dungeon crawler inventory logic"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
